@@ -2,6 +2,11 @@
 VERSION 0.6.4cvs
 ================
 
+2005-02-05  Vincent Richard  <vincent@vincent-richard.net>
+
+ * utility/md5.cpp: fixed forward use of swapUint32Array() with
+   gcc 3.3 (Apple).
+
 2005-02-01  Vincent Richard  <vincent@vincent-richard.net>
 
  * text.cpp: fixed possible segfault when encoding is Base64 (typo).
